--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <nav class="nav">
           <a href="./index.html" class="logo-link"> Web<span class="logo-black">Studio</span> </a>
           <ul class="site-nav">
-            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+            <li class="item-nav"><a href="./index.html" class="link current">Студия</a></li>
+            <li class="item-nav"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="item-nav"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <div class="contact-block">
@@ -77,13 +77,13 @@
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-list">
-            <li>
+            <li class="item">
               <a href=""><img src="images/photo1.jpg" alt="Верстка сайта" width="370"></a>
-            </li>
-            <li>
+            </li >
+            <li class="item">
               <a href=""><img src="images/photo2.jpg" alt="Дизай телефона" width="370" /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""><img src="images/photo3.jpg" alt="Робота за планшетом" width="370" /></a>
             </li>
           </ul>
@@ -93,7 +93,7 @@
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="cards-list">
-            <li class="card">
+            <li class="card item">
               <img
                 class="card-image"
                 src="./images/image1.jpg"
@@ -105,7 +105,7 @@
                 <p class="card-position">Product Designer</p>
               </div>
             </li>
-            <li class="card">
+            <li class="card item">
               <img
                 class="card-image"
                 src="./images/image2.jpg"
@@ -117,7 +117,7 @@
                 <p class="card-position">Frontend Developer</p>
               </div>
             </li>
-            <li class="card">
+            <li class="card item">
               <img
                 class="card-image"
                 src="./images/image3.jpg"
@@ -129,7 +129,7 @@
                 <p class="card-position">Marketing</p>
               </div>
             </li>
-            <li class="card">
+            <li class="card item">
               <img
                 class="card-image"
                 src="./images/image4.jpg"
