--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,9 @@
         <nav class="nav">
           <a href="./index.html" class="logo-link"> Web<span class="logo-black">Studio</span> </a>
           <ul class="site-nav">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+            <li class="item-nav"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item-nav"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="item-nav"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <div class="contact-block">
@@ -41,17 +41,15 @@
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="filter-list">
-            <li class="item"><button type="button" class="btn">Все</button></li>
-            <li class="item"><button type="button" class="btn">Веб-сайты</button></li>
-            <li class="item"><button type="button" class="btn">Приложения</button></li>
-            <li class="item"><button type="button" class="btn">Дизайн</button></li>
-            <li class="item"><button type="button" class="btn">Маркетинг</button></li>
+            <li class="item-btn"><button type="button" class="btn">Все</button></li>
+            <li class="item-btn"><button type="button" class="btn">Веб-сайты</button></li>
+            <li class="item-btn"><button type="button" class="btn">Приложения</button></li>
+            <li class="item-btn"><button type="button" class="btn">Дизайн</button></li>
+            <li class="item-btn"><button type="button" class="btn">Маркетинг</button></li>
           </ul>
           <ul class="list">
             <li class="item">
-              <a href=""
-                ><img class="portfolio-img" src="./images/pic1.jpg" alt="Технокряк" width="370"
-              /></a>
+              <a href=""><img src="./images/pic1.jpg" alt="Технокряк" width="370" /></a>
               <div class="p-20-24">
                 <h2 class="caption">Технокряк</h2>
                 <p class="content">Веб-сайт</p>
@@ -59,11 +57,7 @@
             </li>
             <li class="item">
               <a href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/pic2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
+                ><img src="./images/pic2.jpg" alt="Постер New Orlean vs Golden Star" width="370"
               /></a>
               <div class="p-20-24">
                 <h2 class="caption">Постер New Orlean vs Golden Star</h2>
@@ -84,18 +78,14 @@
               </div>
             </li>
             <li class="item">
-              <a href=""
-                ><img class="portfolio-img" src="./images/pic4.jpg" alt="Проект Prime" width="370"
-              /></a>
+              <a href=""><img src="./images/pic4.jpg" alt="Проект Prime" width="370" /></a>
               <div class="p-20-24">
                 <h2 class="caption">Проект Prime</h2>
                 <p class="content">Маркетинг</p>
               </div>
             </li>
             <li class="item">
-              <a href=""
-                ><img class="portfolio-img" src="./images/pic5.jpg" alt="Проект Boxes" width="370"
-              /></a>
+              <a href=""><img src="./images/pic5.jpg" alt="Проект Boxes" width="370" /></a>
               <div class="p-20-24">
                 <h2 class="caption">Проект Boxes</h2>
                 <p class="content">Приложение</p>
@@ -128,22 +118,14 @@
               </div>
             </li>
             <li class="item">
-              <a href=""
-                ><img class="portfolio-img" src="./images/pic8.jpg" alt="Проект LAB" width="370"
-              /></a>
+              <a href=""><img src="./images/pic8.jpg" alt="Проект LAB" width="370" /></a>
               <div class="p-20-24">
                 <h2 class="caption">Проект LAB</h2>
                 <p class="content">Маркетинг</p>
               </div>
             </li>
             <li class="item">
-              <a href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/pic9.jpg"
-                  alt="Growing Business"
-                  width="370"
-              /></a>
+              <a href=""><img src="./images/pic9.jpg" alt="Growing Business" width="370" /></a>
               <div class="p-20-24">
                 <h2 class="caption">Growing Business</h2>
                 <p class="content">Приложение</p>
